Enhance knowledge base and admin pages with new styles, filter functionality, and improved layout. Removed deprecated admin-category and myTicket pages. Updated ticket list and server monitoring pages for better user experience and consistency.

--- a/Home.html
+++ b/Home.html
@@ -226,9 +226,9 @@
                   <label for="filter-select-home">Show By :</label>
                   <select id="filter-select-home">
                     <option value="">Select</option>
-                    <option value="date">Date</option>
-                    <option value="department">Department</option>
-                    <option value="priority">Priority</option>
+                    <option value="date">aplikasi</option>
+                    <option value="department">hardware</option>
+                    <option value="priority">dan sebagainya</option>
                   </select>
                 </div>
 
@@ -541,6 +541,11 @@
         </div>
       </div>
     </div>
+
+ <!-- WhatsApp Button -->
+    <a href="#" class="whatsapp-btn" title="Contact us on WhatsApp">
+      <i class="fab fa-whatsapp"></i>
+    </a>
 
     <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
