--- a/admin-category-article.html
+++ b/admin-category-article.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IT-HelpDesk - Article Management</title>
+    <title>IT-HelpDesk - Article Category Management</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -46,10 +46,39 @@
         padding: 0 20px 20px 20px;
       }
 
+      .category-input {
+        background-color: #f5f5f5;
+        border: none;
+        height: 45px;
+        border-radius: 8px;
+      }
+
+      .save-btn {
+        background-color: #ff7f50;
+        border: none;
+        color: white;
+        height: 45px;
+        border-radius: 8px;
+      }
+
       .card {
         border: none;
         border-radius: 10px;
         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+      }
+
+      .table thead {
+        background-color: #f5f5f5;
+      }
+
+      .dropdown-toggle::after {
+        display: none;
+      }
+
+      .month-selector {
+        border: 1px solid #ddd;
+        border-radius: 8px;
+        padding: 6px 12px;
       }
     </style>
   </head>
@@ -64,7 +93,7 @@
     <div class="main-content">
       <!-- Banner -->
       <div class="banner">
-        <h1>Article Management</h1>
+        <h1>Article Category Management</h1>
         <p>Dokumentasi & panduan troubleshooting untuk masalah IT.</p>
       </div>
 
@@ -76,38 +105,55 @@
             <div class="col-md-8">
               <input
                 type="text"
-                class="form-control bg-light border-0"
-                style="height: 45px; border-radius: 8px"
+                class="form-control category-input"
                 placeholder="Enter category name"
               />
             </div>
             <div class="col-md-4">
-              <button
-                class="btn text-white px-4"
-                style="
-                  background-color: #ff7f50;
-                  height: 45px;
-                  border-radius: 8px;
-                "
-              >
-                Save
-              </button>
+              <button class="btn save-btn px-4">Save</button>
             </div>
           </div>
         </div>
 
         <!-- Article Category Management -->
-        <div class="card mb-4 rounded-4 border-0 shadow-sm">
+        <div class="card mb-4">
           <div class="card-body p-4">
-            <h3 class="fs-4 mb-4">Article Category Management</h3>
+            <div class="d-flex justify-content-between align-items-center mb-4">
+              <h3 class="fs-4 mb-0">Article Category Management</h3>
+              <div class="dropdown">
+                <button
+                  class="btn month-selector dropdown-toggle"
+                  type="button"
+                  id="monthDropdown"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  October <i class="fas fa-chevron-down ms-2"></i>
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="monthDropdown">
+                  <li><a class="dropdown-item" href="#">January</a></li>
+                  <li><a class="dropdown-item" href="#">February</a></li>
+                  <li><a class="dropdown-item" href="#">March</a></li>
+                  <li><a class="dropdown-item" href="#">April</a></li>
+                  <li><a class="dropdown-item" href="#">May</a></li>
+                  <li><a class="dropdown-item" href="#">June</a></li>
+                  <li><a class="dropdown-item" href="#">July</a></li>
+                  <li><a class="dropdown-item" href="#">August</a></li>
+                  <li><a class="dropdown-item" href="#">September</a></li>
+                  <li><a class="dropdown-item" href="#">October</a></li>
+                  <li><a class="dropdown-item" href="#">November</a></li>
+                  <li><a class="dropdown-item" href="#">December</a></li>
+                </ul>
+              </div>
+            </div>
 
             <div class="table-responsive">
               <table class="table">
-                <thead class="bg-light">
+                <thead>
                   <tr>
                     <th class="py-3">Department</th>
-                    <th class="py-3">Subject</th>
-                    <th class="py-3">Category</th>
+                    <th class="py-3">Article Category Name</th>
+                    <th class="py-3">Category Type</th>
                     <th class="py-3">Status</th>
                     <th class="py-3">Edit</th>
                   </tr>
@@ -115,7 +161,7 @@
                 <tbody>
                   <tr>
                     <td>IT Office</td>
-                    <td>Help Desk 2</td>
+                    <td>6096 Marjolaine Landing</td>
                     <td>Aplikasi Multimedia</td>
                     <td>Hidden</td>
                     <td>
@@ -126,7 +172,7 @@
                   </tr>
                   <tr>
                     <td>IT Office</td>
-                    <td>Mengenal Lebih Dalam Istilah</td>
+                    <td>6096 Marjolaine Landing</td>
                     <td>Informasi Umum</td>
                     <td>Showed</td>
                     <td>
@@ -137,7 +183,7 @@
                   </tr>
                   <tr>
                     <td>IT Office</td>
-                    <td>Broadcasting</td>
+                    <td>6096 Marjolaine Landing</td>
                     <td>Informasi Umum</td>
                     <td>Showed</td>
                     <td>
