--- a/myTicket(s).html
+++ b/myTicket(s).html
@@ -139,6 +139,93 @@
         right: 30px;
         transform: translateY(-50%);
       }
+
+      /* Filter styles to ensure visibility */
+      .filter-btn {
+        cursor: pointer;
+        position: relative;
+        padding: 8px;
+        background-color: #f8f9fa;
+        border-radius: 5px;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .filter-modal {
+        position: absolute;
+        top: 40px;
+        left: 0;
+        width: 280px;
+        background-color: white;
+        border-radius: 8px;
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
+        padding: 15px;
+        z-index: 1000;
+        display: none;
+      }
+
+      .filter-modal.active {
+        display: block;
+      }
+
+      .filter-options {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 8px;
+        margin-bottom: 15px;
+      }
+
+      .filter-option {
+        padding: 6px 12px;
+        background-color: #f8f9fa;
+        border-radius: 20px;
+        font-size: 14px;
+        cursor: pointer;
+        transition: all 0.2s;
+      }
+
+      .filter-option:hover {
+        background-color: #e9ecef;
+      }
+
+      .filter-option.active {
+        background-color: #4285f4;
+        color: white;
+      }
+
+      .filter-select {
+        margin-bottom: 15px;
+      }
+
+      .filter-select select {
+        width: 100%;
+        padding: 8px;
+        border-radius: 5px;
+        border: 1px solid #ced4da;
+        margin-top: 5px;
+      }
+
+      .filter-notes {
+        font-size: 12px;
+        color: #6c757d;
+        margin-bottom: 15px;
+      }
+
+      .filter-button {
+        width: 100%;
+        padding: 8px;
+        background-color: #4285f4;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.2s;
+      }
+
+      .filter-button:hover {
+        background-color: #3367d6;
+      }
     </style>
   </head>
   <body>
@@ -194,9 +281,9 @@
 
         <!-- Total Tickets -->
         <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 mb-4">
-          <div class="dashboard-card solved-tickets">
-            <div class="icon solved-tickets">
-              <i class="fas fa-check"></i>
+          <div class="dashboard-card total-tickets">
+            <div class="icon total-tickets">
+              <i class="far fa-file-alt"></i>
             </div>
             <div class="number">10.555</div>
             <div class="description">Total Ticket(s)</div>
@@ -225,13 +312,13 @@
           <div class="d-flex align-items-center">
             <div
               class="filter-btn me-3"
-              id="filter-btn"
+              id="filter-btn-ticket"
               style="position: relative"
             >
               <i class="fa-solid fa-sliders"></i>
 
               <!-- Filter Modal -->
-              <div class="filter-modal" id="filter-modal">
+              <div class="filter-modal" id="filter-modal-ticket">
                 <h3>Select Ticket(s) Status</h3>
 
                 <div class="filter-options">
@@ -243,8 +330,8 @@
                 </div>
 
                 <div class="filter-select">
-                  <label for="filter-select">Show By :</label>
-                  <select id="filter-select">
+                  <label for="filter-select-ticket">Show By :</label>
+                  <select id="filter-select-ticket">
                     <option value="">Select</option>
                     <option value="date">Aplikasi</option>
                     <option value="department">Hardware</option>
@@ -362,72 +449,24 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="utils.js"></script>
     <script>
-      // Sidebar Menu Toggle
       document.addEventListener("DOMContentLoaded", function () {
-        // Add click event to dropdown toggles
-        const dropdownToggles = document.querySelectorAll(
-          ".nav-link.dropdown-toggle"
-        );
-
-        dropdownToggles.forEach((toggle) => {
-          toggle.addEventListener("click", function (e) {
-            e.preventDefault();
-
-            // Toggle the submenu visibility
-            const submenu = this.nextElementSibling;
-            if (submenu) {
-              const isVisible = submenu.style.display === "block";
-              submenu.style.display = isVisible ? "none" : "block";
-
-              // Toggle the arrow icon rotation
-              const arrow = this.querySelector(".fa-angle-down");
-              if (arrow) {
-                arrow.style.transform = isVisible
-                  ? "rotate(0deg)"
-                  : "rotate(180deg)";
-              }
-            }
-          });
-        });
-
-        // Initialize submenus based on active state
-        const activeSubmenuItems = document.querySelectorAll(
-          ".submenu-sidebar li a.active"
-        );
-        activeSubmenuItems.forEach((item) => {
-          const parentSubmenu = item.closest(".submenu-sidebar");
-          if (parentSubmenu) {
-            parentSubmenu.style.display = "block";
-
-            const parentDropdown = parentSubmenu.previousElementSibling;
-            if (
-              parentDropdown &&
-              parentDropdown.classList.contains("dropdown-toggle")
-            ) {
-              const arrow = parentDropdown.querySelector(".fa-angle-down");
-              if (arrow) {
-                arrow.style.transform = "rotate(180deg)";
-              }
-            }
-          }
-        });
-
         // Filter Modal Toggle
-        const filterBtn = document.getElementById("filter-btn");
-        const filterModal = document.getElementById("filter-modal");
+        const filterBtn = document.getElementById("filter-btn-ticket");
+        const filterModal = document.getElementById("filter-modal-ticket");
 
         if (filterBtn && filterModal) {
           filterBtn.addEventListener("click", function (e) {
             e.stopPropagation(); // Stop click from propagating to document
             filterModal.classList.toggle("active");
-            filterModal.classList.add("fade-in");
           });
 
           // Close the filter modal when clicking outside
           document.addEventListener("click", function (e) {
-            if (!filterBtn.contains(e.target)) {
+            if (
+              !filterBtn.contains(e.target) &&
+              !filterModal.contains(e.target)
+            ) {
               filterModal.classList.remove("active");
-              filterModal.classList.remove("fade-in");
             }
           });
 
@@ -462,25 +501,29 @@
 
           // Filter Button Action
           const filterButton = filterModal.querySelector(".filter-button");
-          filterButton.addEventListener("click", function () {
-            // Get selected statuses
-            const selectedStatuses = [];
-            filterOptions.forEach((option) => {
-              if (option.classList.contains("active")) {
-                selectedStatuses.push(option.textContent);
-              }
+          if (filterButton) {
+            filterButton.addEventListener("click", function () {
+              // Get selected statuses
+              const selectedStatuses = [];
+              filterOptions.forEach((option) => {
+                if (option.classList.contains("active")) {
+                  selectedStatuses.push(option.textContent);
+                }
+              });
+
+              // Get selected "Show By" value
+              const showByValue = document.getElementById(
+                "filter-select-ticket"
+              ).value;
+
+              // Apply filters (this is where you'd implement actual filtering)
+              console.log("Selected statuses:", selectedStatuses);
+              console.log("Show by:", showByValue);
+
+              // Close the modal
+              filterModal.classList.remove("active");
             });
-
-            // Get selected "Show By" value
-            const showByValue = document.getElementById("filter-select").value;
-
-            // Apply filters (this is where you'd implement actual filtering)
-            console.log("Selected statuses:", selectedStatuses);
-            console.log("Show by:", showByValue);
-
-            // Close the modal
-            filterModal.classList.remove("active");
-          });
+          }
         }
       });
     </script>
